<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ekyc.itsutra.ekyc.Act_Config">

    <LinearLayout
        android:id="@+id/llBluetoothScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtBluetoothConnectivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bluetooth_config"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnBluetoothScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/scan_bluetooth"
            android:textColor="@color/white"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBTconnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llBluetoothScan"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_device"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/actMain_tv_device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/device_info"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <Button
            android:id="@+id/actMain_btn_pair"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#2e5e36"
            android:onClick="onClickBtnPair"
            android:text="@string/pair"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/actMain_btn_conn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#124b1b"
            android:onClick="onClickBtnConn"
            android:text="@string/connect"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_Exit"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:onClick="evt_Exit"
            android:text="@string/exit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>


</RelativeLayout>
