<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_biomertic_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f99008"
        android:padding="10dp"
        android:text="@string/biometric_information"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_grand_father"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/txt_pa_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/pa_number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/et_pa_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pa_number" />


            <TextView
                android:id="@+id/txt_pa_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pa_image"
                android:padding="10dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Photo"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>